# github-actions-playground

./: .gitignore  Makefile  README.md
.github/actions/cache/: action.yml
.github/workflows/: custom-action.yml  deploy-frontend.yml  deployment.yml  first-action.yml  lambda-deploy-dockerfile.yml  lambda-deploy.yml  matrix.yml  output.yml  reusable.yml  test.yml  use-reuse.yml
backend/: lambda_function.py  pyproject.toml  requirements.txt
backend/roles/: GitHubActionsToLambda.json  assume-role-policy.json
containers/python/: Dockerfile
docs/: fundamentals.md
frontend/: package-lock.json  package.json
