[tool.poetry]
authors = ["shun198"]
description = ""
name = "backend"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
